--- a/redux-api/src/App.css
+++ b/redux-api/src/App.css
@@ -31,3 +31,17 @@
     transform: rotate(360deg);
   }
 }
+
+button {
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+  background-color: black;
+  color: white;
+}
+
+h4 {
+  border-bottom: 2px solid red;
+  width: 30%;
+  margin: 20px auto;
+}
